--- a/css/main.css
+++ b/css/main.css
@@ -1,22 +1,3 @@
 @import url("./sections/General.css");
 @import url("./sections/Header.css");
-
-main {
-  width: 100%;
-  height: calc(100vh - 6rem);
-  background-color: aquamarine;
-  position: relative;
-}
-
-.heading-primary {
-  font-family: "Outfit", sans-serif;
-  font-size: 12rem;
-  font-weight: 400;
-  line-height: 1;
-  text-align: center;
-}
-
-.hero-img {
-  width: 22.5rem;
-  height: 25rem;
-}
+@import url("./sections/Hero.css");
