--- a/css/sections/Hero.css
+++ b/css/sections/Hero.css
@@ -7,7 +7,7 @@ main {
 .heading-primary {
   font-family: "Outfit", sans-serif;
   font-size: 12rem;
-  font-weight: 400;
+  font-weight: 300;
   line-height: 1;
   text-align: center;
 }
@@ -43,6 +43,9 @@ main {
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
+}
+.bottom-text {
+  font-weight: 400;
 }
 
 .circle-btn {
