--- a/css/sections/General.css
+++ b/css/sections/General.css
@@ -6,75 +6,74 @@
   box-sizing: border-box;
 }
 
-/* Zodial Regular - 400 */
+/**
+ * @license
+ *
+ * Font Family: Zodiak
+ * Designed by: Jérémie Hornus, Gaetan Baehr, Jean-Baptiste Morizot, Alisa Nowak, Theo Guillard
+ * URL: https://www.fontshare.com/fonts/zodiak
+ * © 2024 Indian Type Foundry
+ *
+ * Font Styles:
+ * Zodiak Variable(Variable font)
+ * Zodiak Variable Italic(Variable font)
+ * Zodiak Thin
+ * Zodiak Thin Italic
+ * Zodiak Light
+ * Zodiak Light Italic
+ * Zodiak Regular
+ * Zodiak Italic
+ * Zodiak Bold
+ * Zodiak Bold Italic
+ * Zodiak Extrabold         
+ * Zodiak Extrabold Italic
+ * Zodiak Black
+ * Zodiak Black Italic
+ *
+*/
+
+/**
+* This is a variable font
+* You can controll variable axes as shown below:
+* font-variation-settings: 'wght' 900.0;
+*
+* available axes:
+
+* 'wght' (range from 100.0 to 900.0)
+
+*/
+
 @font-face {
-  font-family: "Zodiak";
-  src: url("../public/fonts/Zodiak-Regular.woff2") format("woff2"),
-    url("../public/fonts/Zodiak-Regular.woff") format("woff"),
-    url("../public/fonts/Zodiak-Regular.ttf") format("ttf");
-  font-style: normal;
-  font-weight: 400;
-}
-/* Zodial Italic - 400 */
-@font-face {
-  font-family: "Zodiak";
-  src: url("../public/fonts/Zodiak-Italic.woff2") format("woff2"),
-    url("../public/fonts/Zodiak-Italic.woff") format("woff"),
-    url("../public/fonts/Zodiak-Italic.ttf") format("ttf");
-  font-style: italic;
-  font-weight: 400;
-}
-/* Zodial Bold - 700 */
-@font-face {
-  font-family: "Zodiak";
-  src: url("../public/fonts/Zodiak-Bold.woff2") format("woff2"),
-    url("../public/fonts/Zodiak-Bold.woff") format("woff"),
-    url("../public/fonts/Zodiak-Bold.ttf") format("ttf");
-  font-style: normal;
+  font-family: "Zodiak-Bold";
+  src: local("Zodiak") url("../fonts/Zodiak-Bold.woff2") format("woff2"),
+    url("../fonts/Zodiak-Bold.woff") format("woff"),
+    url("../fonts/Zodiak-Bold.ttf") format("truetype");
   font-weight: 700;
+  font-display: swap;
+  font-style: normal;
 }
 
 /* Outfit Font Regular */
 
 @font-face {
-  font-family: "Outfit";
-  src: url("../public/fonts/Outfit-Regular.woff2") format("woff2"),
-    url("../public/fonts/Outfit-Regular.woff") format("woff"),
-    url("../public//fonts/Outfit-Regular.ttf") format("ttf");
+  font-family: "Outfit-Variable";
+  src: local("Outfit") url("../fonts/Outfit-Variable.woff2") format("woff2"),
+    url("../fonts/Outfit-Variable.woff") format("woff"),
+    url("../fonts/Outfit-Variable.ttf") format("truetype");
+  font-weight: 100 900;
+  font-display: swap;
   font-style: normal;
-  font-weight: 400;
-}
-/* Outfit Font SemiBold */
-
-@font-face {
-  font-family: "Outfit";
-  src: url("../public/fonts/Outfit-Medium.woff2") format("woff2"),
-    url("../public/fonts/Outfit-Medium.woff") format("woff"),
-    url("../public//fonts/Outfit-Medium.ttf") format("ttf");
-  font-style: normal;
-  font-weight: 500;
-}
-/* Outfit Font SemiBold */
-
-@font-face {
-  font-family: "Outfit";
-  src: url("../public/fonts/Outfit-SemiBold.woff2") format("woff2"),
-    url("../public/fonts/Outfit-SemiBold.woff") format("woff"),
-    url("../public//fonts/Outfit-SemiBold.ttf") format("ttf");
-  font-style: normal;
-  font-weight: 600;
 }
 
 html {
   font-family: "Outfit", sans-serif;
 }
+
 body {
   height: 100vh;
   overflow: hidden;
 }
-h1 {
-  font-family: "Zodiak", "serif";
-}
+
 a {
   text-decoration: none;
   color: inherit;
@@ -91,7 +90,7 @@ img {
 
 .btn {
   padding: 0.3rem 0.8rem;
-  border: 2px solid navy;
+  border: 2px solid transparent;
   border-radius: 5rem;
   font-weight: 500;
   font-size: 1rem;
