--- a/css/sections/Header.css
+++ b/css/sections/Header.css
@@ -18,6 +18,13 @@
   border: 1px solid black;
   padding: 0.25rem 0.5rem;
   border-radius: 8rem;
+  transition: all 0.4s ease;
+  cursor: pointer;
+}
+
+.menu-btn:is(:hover, :focus-visible),
+.menu-icon:is(:hover, :focus-visible) {
+  background-color: rgb(220, 220, 220);
 }
 .menu-icon {
   display: inline-block;
@@ -27,12 +34,15 @@
   padding: 0.3rem 0.35rem;
 }
 .menu-icon svg {
-  /* width: 100%;
-  height: 100%; */
+  width: 100%;
+  height: 100%;
   fill: currentColor;
 }
 
 .logo {
   text-transform: uppercase;
   font-size: 2rem;
+  font-weight: 600;
+  font-style: normal;
+  font-family: "Zodiak", "serif";
 }
